# marketing-distribution

./: Dockerfile  README.md  dbuild-dev.sh  dbuild-production.sh  drun-dev.sh  drun-production.sh  pyproject.toml
src/marketing_distribution/: boot.py  config.toml  data_masking.py  main.py
src/marketing_distribution/queries/: sql.py
src/marketing_distribution/utility/: db.py  getSecrets.py  utils.py
