[tool.poetry]
name = "marketing-distribution"
version = "0.1.0"
description = "To sent De-Tokenize data to marketing team"
authors = ["Surendran Dhashnamurthy <surendran.dhashnamurthy@elevancehealth.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
SQLAlchemy = "^1.4.29"
boto3 = "^1.20.33"
psycopg2-binary = "^2.9.3"
toml = "^0.10.2"
watchtower = "^2.1.1"
pandas = "^1.3.5"
great-expectations = "^0.14.1"
gnupg = "^2.3.1"
pyarrow = "^7.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
